--- a/client/src/components/ResultItem/ResultItem.css
+++ b/client/src/components/ResultItem/ResultItem.css
@@ -46,6 +46,13 @@
   font-size: 1.5rem;
 }
 
+.item-price .decimals {
+  font-size: 1rem;
+  font-weight: 300;
+  position: relative;
+  top: -2px;
+}
+
 .item-price img {
   margin-left: 0.4rem;
   width: 25px;
