--- a/client/src/components/MainButton/MainButton.css
+++ b/client/src/components/MainButton/MainButton.css
@@ -3,6 +3,7 @@ button.button {
   border-radius: 3px;
   border: none;
   color: #fff;
+  cursor: pointer;
   font-size: 1rem;
   margin-top: 2rem;
   padding: 0.7rem 0;
