--- a/client/src/components/SearchBar/SearchBar.css
+++ b/client/src/components/SearchBar/SearchBar.css
@@ -1,12 +1,12 @@
 .search-bar {
-  align-content: center;
+  align-items: center;
   background-color: #ffe600;
-  height: 70px; /*Change*/
+  padding: 0.5rem 0;
 }
 
 .search-bar .logo {
   grid-column: col-start 2;
-  width: 60px;
+  width: 55px;
 }
 
 .search-bar .search-input-component {
