--- a/client/src/components/SearchBar/SearchBar.css
+++ b/client/src/components/SearchBar/SearchBar.css
@@ -4,9 +4,14 @@
   padding: 0.5rem 0;
 }
 
-.search-bar .logo {
+.search-bar a {
   grid-column: col-start 2;
+}
+
+.search-bar .logo {
   width: 55px;
+  position: relative;
+  top: 4px;
 }
 
 .search-bar .search-input-component {
